--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId = "${mod_id}"
 version = "${mod_version}"
 displayName = "${mod_name}"
 
-logoFile = "logo.png"
+logoFile = "icon.png"
 authors = "${mod_authors}"
 
 description = '''${mod_description}'''
