--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
 .idea
-.vscode
-.gradle
+
+# gradle
 build
+.gradle
+
+# other
+eclipse
 run
+runs
 run-data
+
+repo
