--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,29 @@
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-minecraft_version=1.20.1
-minecraft_version_range=[1.20.1,1.21)
-forge_version=47.3.12
-forge_version_range=[47,)
-loader_version_range=[47,)
+# Gradle performance settings
+org.gradle.jvmargs=-Xmx1G
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
-mapping_channel=official
-mapping_version=1.20.1
+# Parchment mappings
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
 
-mod_id=ccshenanigans
-mod_name=CC: Shenanigans
-mod_license=All Rights Reserved
-mod_version=1.0
-mod_group_id=de.meowlan
-mod_authors=Sleb & Meowlan
-mod_description=Silly shenanigans for CC: Tweaked
+# Minecraft & NeoForge version settings
+minecraft_version=1.21.1
+minecraft_version_range=[1.21.1]
+neo_version=21.1.173
+neo_version_range=[21.1.173,)
+loader_version_range=[1,)
 
-cctVersion=1.114.2
+# Dependencies
+cc_tweaked_version=1.115.1
+
+# Mod metadata
+mod_id=ccwaterframes
+mod_name=CC: Waterframes
+mod_license=MIT
+mod_version=1.0.0
+mod_group_id=net.revilo.ccwaterframes
+mod_authors=Revilo0509
+mod_description=Adds Waterframe peripherals for CC: Tweaked.\nUseful for water manipulation, scripting, and automation.
